roles/servers/files/10.32.10.11/iptables
# Generated by iptables-save v1.4.7 on Sun Oct 13 09:50:16 2013
*nat
:PREROUTING ACCEPT [14:824]
:POSTROUTING ACCEPT [34:2205]
:OUTPUT ACCEPT [34:2205]
-A PREROUTING -p tcp -m tcp --dport 610 -j REDIRECT --to-ports 587
COMMIT
# Completed on Sun Oct 13 09:50:16 2013
# Generated by iptables-save v1.4.7 on Sun Oct 13 09:50:16 2013
*filter
:INPUT DROP [4:248]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1956:452358]
:LOGGING - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#-A INPUT -s 10.32.16.64/26 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.32.5.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.32.5.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
#-A INPUT -s 10.32.16.64/26 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 4949 -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 10.32.16.241 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 10.32.100.25 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 10.32.6.80 -m tcp -p tcp --dport 610 -m state --state NEW -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 10.32.10.10 -m tcp -p tcp --dport 389 -j ACCEPT
-A INPUT -s 10.32.5.5 -m tcp -p tcp --dport 389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 610 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 110 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2812 -j ACCEPT
-A INPUT -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -s 62.210.167.135 -j DROP
#-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 587 -j ACCEPT
#-A INPUT -s 127.0.0.1 -p tcp -m tcp --dport 587 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 587 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT


## Must commit
COMMIT
